Decrease dependency footprint
Remove Apache Commons IO dependency because it was used sparingly anyway.
Remove Crawler Commons dependency from Core pom file because it is included
as a transitive dependency anyway by Maven.